[package]
name = "theforgeonsolana"
version = "0.1.0"
edition = "2024"
description = "Prototype of the forge for [minechain.gg](https://www.minechain.gg)"
license = "MIT"
repository = "https://github.com/eliasjudin/theforgeonsolana"

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
metaplex-token-metadata = "0.3.0"

[features]
default = ["no-entrypoint"]